[package]
name = "pico-ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
futures = "0.3.21"
csv = "1.1.6"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }